--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,74 +1,65 @@
 @charset "UTF-8"
 
-* {
-    height: 1000px;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+
+*{
     margin: 0;
     padding: 0;
-}
-
-.navigation {
-    position: fixed;
-    height: 70px;
-    right: 0;
-    left: 0;
-    background-color: rgba(88, 88, 169, 0.445);
     box-sizing: border-box;
-   }
-
-.navigation h1 {
-    position: fixed;
-    top: 0;
-    left: 0;
-    margin: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #1100ff;
-    background-image: -webkit-linear-gradient(0deg, #4d40ff 0%, #466e85 46%, #ff0055 86% );
-    background-clip: text;
-    -webkit-background-clip: text;
-    text-emphasis-color: transparent;
-    -webkit-text-fill-color: transparent;
 }
 
-.navigation a:hover {
-    background-color: #5047d556;
-    padding: 5px;
-    border-radius: 5px;
-    text-decoration: none;
-    transition-duration: 0.5s;
-
+html, body {
+    height: 100%;
 }
 
-ul {
-    position: relative;
-    height: 70px;
-    left: 810px;
-}
-
-li {
-    display: inline-block;
-    margin-left: 5px;
-    width: 90px;
-    height: 40px;
-    padding-top: 25px;
-    font-weight: bold;
-    list-style: none;
-    text-align: center;
-    text-transform: uppercase;
-}
-
-a {
+body {
+    font-family: 'Poppins', sans-serif;
+    background-color: black;
     color: white;
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
+    display: grid;
+    place-items: center;
+}
+
+.list {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    gap: 40px;
+
+}
+
+.link {
+    position: relative;
+    display: inline-block;
     text-decoration: none;
-    transition: 0.5;
+    color: white;
 }
 
-a:hover {
-    background-color: #a581ff5b;
-    box-shadow: 0px 0px 400px 86px #a481ff;
-    -webkit-box-shadow: 0px 0px 400px 86px #a481ff;
-    -moz-box-shadow: 0px 0px 400px 86px #a481ff;
-    text-decoration: underline white;
+.link::before, .lik::after {
+    content: '';
+    position: absolute;
+    left: 0px;
+    width: 100%;
+    height: 2px;
+    background-color: #1100ff;
+    transform: scaleX(0);
+    transition: transform 0.25s;
 }
 
+.link::before {
+    top:-3px;
+    transform-origin: left;
+}
+
+.link::after {
+    bottom:-3px;
+    transform-origin: right;
+    
+}
+
+.link:hover::before,
+.link:hover::after, 
+.active::before, 
+.active::after {
+    transform: scaleX(1);
+}
